--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
+@font-face {
+    font-family: "SF Pro Display";
+    -webkit-font-feature-settings: normal;
+    font-weight: normal;
+    src: url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.otf") format("opentype"),
+    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.woff2") format("woff2"),
+    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.woff") format("woff"),
+    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.eot") format("eot"),
+    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.svg") format("svg");
+}
+
+@font-face {
+    font-family: "SF Pro Text";
+    -webkit-font-feature-settings: normal;
+    font-weight: normal;
+    src: url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "JetBrains Mono";
+    -webkit-font-feature-settings: normal;
+    font-weight: normal;
+    src: url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.ttf") format("truetype"),
+    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.woff2") format("woff2"),
+    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.woff") format("woff"),
+    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.eot") format("eot"),
+    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.svg") format("svg");
+}
+
 body {
     font-family: sans-serif;
     margin: 0;
@@ -6,17 +35,17 @@ body {
     color: #333;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1em 0;
-    text-align: center;
-}
-
 main {
     padding: 20px;
     display: flex;
     justify-content: center;
+}
+
+h1 {
+    text-align: center;
+    font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
+        sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 4em;
 }
 
 #leaderboard-table {
