--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@
     font-family: "SF Pro Text";
     -webkit-font-feature-settings: normal;
     font-weight: normal;
-    src: url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.otf") format("opentype");
+    src: url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.otf") format("opentype"),
+    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.woff2") format("woff2"),
+    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.woff") format("woff"),
+    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.eot") format("eot"),
+    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.svg") format("svg");
 }
 
 @font-face {
@@ -27,45 +31,73 @@
     url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.svg") format("svg");
 }
 
-body {
-    font-family: sans-serif;
+html, body {
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
+    height: 100%;
 }
 
 main {
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+.title-introduction {
+    margin: 0 20px;
+    padding: 0;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    min-height: 100vh;
+}
+
+.title-introduction {
+    align-items: center;
+    justify-content: center;
+    margin: auto 20px;
+}
+
+.title-introduction h1 {
+    font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 4em;
+    letter-spacing: 0.08em;
+}
+
+.title-introduction p {
+    font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 2em;
+}
+
+.benchmark-link {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
-h1 {
-    text-align: center;
-    font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
-        sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 4em;
+.benchmark-link-item img {
+    margin: 0 20px;
+    width: 40px;
+    height: 40px;
+    transition: transform 0.5s ease;
 }
 
-#leaderboard-table {
-    width: 80%;
-    border-collapse: collapse;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+.benchmark-link-item img:hover {
+    transform: scale(1.25);
 }
 
-#leaderboard-table th, #leaderboard-table td {
-    padding: 12px 15px;
-    border: 1px solid #ddd;
-    text-align: left;
-}
-
-#leaderboard-table th {
-    background-color: #f0f0f0;
-    font-weight: bold;
-}
-
-#leaderboard-table tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
+.graph {
+    width: 90%;
+    height: 800px;
+    max-width: 1000px;
+    margin: 20px auto;
 }
