--- a/style.css
+++ b/style.css
@@ -1,132 +1,154 @@
-@font-face {
-    font-family: "SF Pro Display";
-    -webkit-font-feature-settings: normal;
-    font-weight: normal;
-    src: url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.otf") format("opentype"),
-    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.woff2") format("woff2"),
-    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.woff") format("woff"),
-    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.eot") format("eot"),
-    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.svg") format("svg");
-}
+/*@font-face {*/
+/*    font-family: "SF Pro Display";*/
+/*    -webkit-font-feature-settings: normal;*/
+/*    font-weight: normal;*/
+/*    src: url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.otf") format("opentype"),*/
+/*    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.woff2") format("woff2"),*/
+/*    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.woff") format("woff"),*/
+/*    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.eot") format("eot"),*/
+/*    url("./fonts/SF-Pro/SF-Pro-Display/SF-Pro-Display-Medium.svg") format("svg");*/
+/*}*/
 
-@font-face {
-    font-family: "SF Pro Text";
-    -webkit-font-feature-settings: normal;
-    font-weight: normal;
-    src: url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.otf") format("opentype"),
-    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.woff2") format("woff2"),
-    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.woff") format("woff"),
-    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.eot") format("eot"),
-    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.svg") format("svg");
-}
+/*@font-face {*/
+/*    font-family: "SF Pro Text";*/
+/*    -webkit-font-feature-settings: normal;*/
+/*    font-weight: normal;*/
+/*    src: url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.otf") format("opentype"),*/
+/*    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.woff2") format("woff2"),*/
+/*    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.woff") format("woff"),*/
+/*    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.eot") format("eot"),*/
+/*    url("./fonts/SF-Pro/SF-Pro-Text/SF-Pro-Text-Medium.svg") format("svg");*/
+/*}*/
 
-@font-face {
-    font-family: "JetBrains Mono";
-    -webkit-font-feature-settings: normal;
-    font-weight: normal;
-    src: url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.ttf") format("truetype"),
-    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.woff2") format("woff2"),
-    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.woff") format("woff"),
-    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.eot") format("eot"),
-    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.svg") format("svg");
-}
+/*@font-face {*/
+/*    font-family: "JetBrains Mono";*/
+/*    -webkit-font-feature-settings: normal;*/
+/*    font-weight: normal;*/
+/*    src: url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.ttf") format("truetype"),*/
+/*    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.woff2") format("woff2"),*/
+/*    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.woff") format("woff"),*/
+/*    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.eot") format("eot"),*/
+/*    url("./fonts/JetBrains-Mono/JetBrainsMono-Regular.svg") format("svg");*/
+/*}*/
 
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
+/*html, body {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    height: 100%;*/
+/*}*/
 
-main {
+/*main {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    height: 100vh;*/
+/*    text-align: center;*/
+/*    box-sizing: border-box;*/
+/*}*/
+
+/*.title-introduction {*/
+/*    margin: 0 20px;*/
+/*    padding: 0;*/
+/*}*/
+
+/*main {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    text-align: center;*/
+/*    min-height: 100vh;*/
+/*}*/
+
+/*.title-introduction {*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    margin: auto 20px;*/
+/*}*/
+
+/*.title-introduction h1 {*/
+/*    font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,*/
+/*    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";*/
+/*    font-size: 4em;*/
+/*    letter-spacing: 0.08em;*/
+/*}*/
+
+/*.title-introduction p {*/
+/*    font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,*/
+/*    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";*/
+/*    font-size: 2em;*/
+/*}*/
+
+/*.benchmark-link {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.benchmark-link-item img {*/
+/*    margin: 0 20px;*/
+/*    width: 40px;*/
+/*    height: 40px;*/
+/*    transition: transform 0.5s ease;*/
+/*}*/
+
+/*.benchmark-link-item img:hover {*/
+/*    transform: scale(1.25);*/
+/*}*/
+
+/*.graph {*/
+/*    width: 90%;*/
+/*    height: 800px;*/
+/*    max-width: 1000px;*/
+/*    margin: 20px auto;*/
+/*}*/
+
+/*.leaderboard-table {*/
+/*    width: 90%;*/
+/*    max-width: 1000px;*/
+/*    margin: 20px auto;*/
+/*    overflow-x: auto; !* Add horizontal scroll for small screens *!*/
+/*}*/
+
+/*.leaderboard-table table {*/
+/*    width: 100%;*/
+/*    border-collapse: collapse;*/
+/*}*/
+
+/*.leaderboard-table th, .leaderboard-table td {*/
+/*    border: 1px solid #ddd;*/
+/*    padding: 15px;*/
+/*    text-align: left;*/
+/*    font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,*/
+/*    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";*/
+/*}*/
+
+/*.leaderboard-table th {*/
+/*    background-color: #f2f2f2;*/
+/*    font-weight: bold;*/
+/*}*/
+
+/*.leaderboard-table tr:nth-child(even) {*/
+/*    background-color: #f9f9f9;*/
+/*}*/
+
+/* style.css */
+body {
+    font-family: sans-serif;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-    text-align: center;
-    box-sizing: border-box;
+    margin: 20px;
 }
-
-.title-introduction {
-    margin: 0 20px;
-    padding: 0;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    min-height: 100vh;
-}
-
-.title-introduction {
-    align-items: center;
-    justify-content: center;
-    margin: auto 20px;
-}
-
-.title-introduction h1 {
-    font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 4em;
-    letter-spacing: 0.08em;
-}
-
-.title-introduction p {
-    font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 2em;
-}
-
-.benchmark-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.benchmark-link-item img {
-    margin: 0 20px;
-    width: 40px;
-    height: 40px;
-    transition: transform 0.5s ease;
-}
-
-.benchmark-link-item img:hover {
-    transform: scale(1.25);
-}
-
-.graph {
-    width: 90%;
-    height: 800px;
-    max-width: 1000px;
-    margin: 20px auto;
-}
-
-.leaderboard-table {
-    width: 90%;
-    max-width: 1000px;
-    margin: 20px auto;
-    overflow-x: auto; /* Add horizontal scroll for small screens */
-}
-
-.leaderboard-table table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.leaderboard-table th, .leaderboard-table td {
-    border: 1px solid #ddd;
+.chart-container {
+    width: 80%;
+    max-height: 1000px;
+    margin-bottom: 30px;
+    border: 1px solid #ccc;
     padding: 15px;
-    text-align: left;
-    font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
-
-.leaderboard-table th {
-    background-color: #f2f2f2;
-    font-weight: bold;
-}
-
-.leaderboard-table tr:nth-child(even) {
-    background-color: #f9f9f9;
+canvas {
+    width: 100%; /* Make the canvas fill the container */
+    max-height: 800px;
 }
