--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
     height: 100vh;
     text-align: center;
     box-sizing: border-box;
-    width: 70%;
+    width: 75%;
     transform: translateY(100vh);
     opacity: 0;
     transition: transform 1.5s ease, opacity 1.5s ease;
@@ -65,7 +65,7 @@ body {
     font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 4em;
-    letter-spacing: 0.08em;
+    letter-spacing: 0.06em;
 }
 
 .title-introduction p {
@@ -93,33 +93,62 @@ body {
 }
 
 .button-container {
+    background-color: #f2f2f2;
+    border-radius: 12px;
     display: flex;
     justify-content: center;
     margin-bottom: 60px;
+    position: relative;
 }
 
 .tab-button {
     background-color: #f2f2f2;
-    border: 1px solid #ddd;
+    border: 0;
     padding: 15px 30px;
+    border-radius: 12px;
     cursor: pointer;
     font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 2.2em;
     letter-spacing: 0.05em;
+    color: #899099;
     transition: background-color 0.3s ease;
+    position: relative;
+    z-index: 1;
 }
 
 .tab-button.active {
-    background-color: #ddd;
+    color: #6b717a;
+    border-radius: 15px;
+    background-color: transparent;
 }
 
-.tab-button:hover {
-    background-color: #e0e0e0;
+.tab-button.active::before {
+    content: "";
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    background-color: white;
+    border-radius: 12px;
+    z-index: -1;
+    left: 0;
+    right: 0;
+}
+
+.tab-button.active[data-tab="LiCoEval"]::before {
+    left: 5%;
+    right: 0;
+}
+
+.tab-button.active[data-tab="HumanEval"]::before {
+    left: 0;
+    right: 5%;
 }
 
 .content-container {
     width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .tab-content {
@@ -146,9 +175,9 @@ body {
 }
 
 .leaderboard-table {
-    width: 90%;
-    max-width: 1000px;
-    margin: 20px auto;
+    display: flex;
+    width: 100%;
+    align-items: center;
     overflow-x: auto;
     opacity: 0;
     transform: translateY(50px);
@@ -158,7 +187,7 @@ body {
 .leaderboard-table h2 {
     font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 2em;
+    font-size: 40px;
     letter-spacing: 0.05em;
     text-align: center;
 }
@@ -169,12 +198,13 @@ body {
 }
 
 .leaderboard-table table {
-    width: 100%;
+    margin: 0 auto;
+    width: 80%;
     border-collapse: collapse;
 }
 
 .leaderboard-table th, .leaderboard-table td {
-    border: 1px solid #ddd;
+    border: 0;
     padding: 15px;
     text-align: left;
     font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
@@ -197,7 +227,7 @@ body {
 
 .notes {
     margin-top: 40px;
-    width: 70%;
+    width: 75%;
     opacity: 0;
     transform: translateY(50px);
     transition: transform 0.8s ease, opacity 0.8s ease;
@@ -211,12 +241,12 @@ body {
 .notes h2 {
     font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 2.2em;
+    font-size: 40px;
     letter-spacing: 0.05em;
     text-align: center;
 }
 
-.notes p {
+.notes li {
     font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 1.6em;
@@ -224,17 +254,22 @@ body {
     margin: 20px 0;
 }
 
-.leaderboard-table.recommendation table td p{
+.recommendation {
+    width: 75%;
+    align-items: center;
+}
+
+.recommendation table td p{
     font-size: 1.2em;
 }
 
-.leaderboard-table.recommendation table td {
+.recommendation table td {
     border: none;
     text-align: left;
     padding: 10px;
 }
 
-.leaderboard-table.recommendation h2 {
+.recommendation h2 {
     font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 2.2em;
@@ -243,7 +278,7 @@ body {
     margin-bottom: 10px;
 }
 
-.leaderboard-table.recommendation p {
+.recommendation p {
     font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 1.6em;
@@ -253,8 +288,8 @@ body {
 
 footer {
     background-color: #fff;
-    width: 100%;
-    text-align: center;
+    width: 30%;
+    text-align: left;
     padding: 20px 0;
     font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
