--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ body {
 }
 
 .leaderboard-table table {
-    margin: 0 auto;
+    margin: 50px auto;
     width: 80%;
     border-collapse: collapse;
 }
@@ -206,23 +206,28 @@ body {
 .leaderboard-table th, .leaderboard-table td {
     border: 0;
     padding: 15px;
-    text-align: left;
+    text-align: center;
     font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 20px;
 }
 
 .leaderboard-table th {
-    background-color: #f2f2f2;
     font-weight: bold;
+    font-size: 30px;
+    letter-spacing: 0.03em;
 }
 
-.leaderboard-table tr:nth-child(even) {
-    background-color: #f9f9f9;
+.first-line {
+    height: 100px;
 }
 
-.leaderboard-table th:first-child,
-.leaderboard-table td:first-child {
-    width: 500px;
+.general {
+    background: linear-gradient(to right, #f7f5ff, white);
+}
+
+.code {
+    background: linear-gradient(to right, #f9f8f2, white);
 }
 
 .notes {
@@ -257,6 +262,18 @@ body {
 .recommendation {
     width: 75%;
     align-items: center;
+    justify-items: center;
+}
+
+.recommendation.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.recommendation table {
+    width: 100%;
+    margin: 50px auto;
+    border-collapse: collapse;
 }
 
 .recommendation table td p{
@@ -282,16 +299,6 @@ body {
     font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 1.6em;
-    text-align: left;
+    text-align: center;
     margin: 20px 0;
-}
-
-footer {
-    background-color: #fff;
-    width: 30%;
-    text-align: left;
-    padding: 20px 0;
-    font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 1.6em;
 }
