--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ body {
     font-size: 40px;
     letter-spacing: 0.05em;
     text-align: center;
+    color: rgba(22, 197, 190, 0.93);
 }
 
 .notes li {
@@ -251,6 +252,10 @@ body {
     font-size: 1.6em;
     text-align: left;
     margin: 20px 0;
+}
+
+.notes a {
+    color: rgb(2, 172, 236);
 }
 
 .recommendation {
@@ -287,6 +292,7 @@ body {
     letter-spacing: 0.05em;
     text-align: center;
     margin-bottom: 10px;
+    color: rgba(22, 197, 190, 0.93);
 }
 
 .recommendation p {
@@ -295,4 +301,8 @@ body {
     font-size: 1.6em;
     text-align: center;
     margin: 20px 0;
+}
+
+.recommendation a {
+    color: rgb(2, 172, 236);
 }
